--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,11 +5,11 @@ html{
 body{
     margin: 0;
     padding: 0;
-    background: linear-gradient(#7209b7, #3f37c0);
+    background: linear-gradient(#092c35, #126E82);
 }
 
 .contenedor{
-    margin: 50px auto;
+    margin: 90px auto;
     width: 400px;
     padding:  30px;
     background:  rgba(0, 0, 0, .5);
@@ -19,13 +19,16 @@ body{
 .contenedor h2{
     margin: 0 0 30px;
     padding:  0;
-    font-size: 30px;
-    color: #4cc9f0;
+    font-size: 35px;
+    color: #EEEBDD;
     text-align: center;
+    font-family: "Merienda";
 }
 
 .contenedor .elemento label{
     color: #fff;
+    font-family: "Tajawal";
+    font-size: larger;
 }
 
 .contenedor .elemento input{
@@ -39,11 +42,18 @@ body{
 }
 
 .contenedor .elemento input[type="submit"]{
-    background-color: #F72585;
+    background-color: #126E82;
     border: none;
     letter-spacing: 5px;
     text-transform: uppercase;
     cursor: pointer;
     padding: 15px;
-    margin-top: 30px;
+    margin-top: 30pxx;
+    font-family: "Tajawal";
+    font-size: larger;
+}
+
+.contenedor .elemento input[type="submit"]:hover{
+    background-color: #021418;
+    color: white;
 }
